cambios para mostrar chip individual

--- a/BackProyecto/proyectoback/src/main/resources/application.properties
+++ b/BackProyecto/proyectoback/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=proyectoback
 
 
-proyecto.datasource.url=jdbc:mysql://localhost:3306/proyectobd
-proyecto.datasource.username=root
-proyecto.datasource.password=Abc123.
+proyecto.datasource.url=jdbc:mysql://database-1.cvkicoyoawmg.eu-west-1.rds.amazonaws.com/ProyectoBD
+proyecto.datasource.username=admin
+proyecto.datasource.password=12345678
 proyecto.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql:true
 spring.jpa.hibernate.ddl-auto=none
